@@ -1,3 +1,13 @@
+2005-05-19  Vincent Noel  <vnoel@cox.net>
+
+	* calendar.c: (CalendarMenu), (read_marked_dates),
+	(init_calendar_data):
+	* logview.c: (logview_select_log), (logview_create_window),
+	(CreateMainWin), (CloseLogMenu), (FileSelectResponse),
+	(toggle_sidebar), (toggle_calendar):
+	* logview.h: Move the calendar to the new sidebar. Add a toggle
+	to show/hide the sidebar.
+
 2005-05-17  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: (logview_add_logs_from_names),
